test/expected/explain_hf.out
explain short float x
        ^
9: error: "short float" is illegal for built-in type
